working build. added counter and final list

--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
         <main>
             <h1>Bus Mall Project</h1>
 
-                <section>
-                    <ul id="picSection">
-                        <li><img id="pic1" src="" alt=""/></li>
-                        <li><img id="pic2" src="" alt=""/></li>
-                        <li><img id="pic3" src="" alt=""/></li>
-                    </ul>
+            <p id="introPara">Congratulations, you have been selected to participate in our experiment. You will be shown three pictures, simply click on the picture you like the most.</p>
 
+                <section>
+                    <ul id="picSection"></ul>
+                    <ol id="reportSection"></ol>
                 </section>
 
         </main>
