--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+      
+
     </head>
 
     <body>
@@ -21,9 +23,12 @@
                     <ol id="reportSection"></ol>
                 </section>
 
+                <section>
+                    <canvas id="myChart" width="400" height="200"></canvas>
+                </section>
         </main>
 
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
