updates. Chart.js in readme. Styles/formatting. Finished chart.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
     </head>
 
     <body>
-        <header></header>
+        <header>Metro Bus Mall Project</header>
         <main>
-            <h1>Bus Mall Project</h1>
 
-            <p id="introPara">Congratulations, you have been selected to participate in our experiment. You will be shown three pictures, simply click on the picture you like the most.</p>
+            <h1 id="introPara">Welcome!</h1>
 
-                <section>
-                    <ul id="picSection"></ul>
-                    <ol id="reportSection"></ol>
-                </section>
+            <p>Congratulations, you have been selected to participate in our experiment. You will be shown three pictures, simply click on the picture you like the most. Do it 25 times and win a prize!</p>
 
-                <section>
-                    <canvas id="myChart" width="400" height="200"></canvas>
-                </section>
+            <section>
+                <ul id="picSection"></ul>
+                <ol id="reportSection"></ol>
+             </section>
+
+            <section id="canvasSection">
+                <canvas id="myChart"></canvas>
+            </section>
+
         </main>
+        <footer></footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
         <script src="js/app.js"></script>
