updated with TA directed changes and for turn-in on today's assignment

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <h1 id="introPara">Welcome!</h1>
 
-            <p>Congratulations, you have been selected to participate in our experiment. You will be shown three pictures, simply click on the picture you like the most. Do it 25 times and win a prize!</p>
+            <p id="introBlurb">Congratulations, you have been selected to participate in our experiment. You will be shown three pictures, simply click on the picture you like the most. Do it 25 times and win a prize!</p>
 
             <section>
                 <ul id="picSection"></ul>
